--- a/assets/style.css
+++ b/assets/style.css
@@ -9,3 +9,11 @@
 .toasted-container .toasted {
   justify-content: center !important;
 }
+
+.toggle-checkbox:checked {
+  right: 0;
+  border-color: #68D391;
+}
+.toggle-checkbox:checked + .toggle-label {
+  background-color: #68D391;
+}
