--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,8 @@
 
 .toggle-checkbox:checked {
   right: 0;
-  border-color: #68D391;
+  border-color: white;
 }
 .toggle-checkbox:checked + .toggle-label {
-  background-color: #68D391;
+  background-color: white;
 }
